syntax = "proto3";

package proto.keys.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/unkeyed/unkey/apps/agent/gen/proto/keys/v1;keysv1";

service KeysService {
  rpc CreateKey(CreateKeyRequest) returns (CreateKeyResponse) {}
}

enum RatelimitType {
  RATELIMIT_TYPE_UNSPECIFIED = 0;
  RATELIMIT_TYPE_FAST = 1;
  RATELIMIT_TYPE_CONSISTENT = 2;
}

message Ratelimit {
  RatelimitType type = 1;
  int32 limit = 2 [(buf.validate.field).int32.gte = 1];
  int32 refill_rate = 3 [(buf.validate.field).int32.gte = 1];
  int32 refill_interval = 4 [(buf.validate.field).int32.gte = 1];
}
message CreateKeyRequest {
  string workspace_id = 1 [(buf.validate.field).string.min_len = 1];
  string key_auth_id = 2 [(buf.validate.field).string.min_len = 1];

  optional string prefix = 3;
  optional string name = 4;
  optional int32 byte_length = 5 [(buf.validate.field).int32.gte = 16];
  optional string owner_id = 6;
  optional string meta = 7;
  // Unix milliseconds
  optional int64 expires = 8;
  optional Ratelimit ratelimit = 9;

  // for_workspace_id marks this key as a root key.
  // workspace_id is set to our internal Unkey workspace while
  // for_workspace_id is set to the workspace id of the user.
  //
  // when verifying a root key, we return this for_workspace_id to authenticate the user.
  optional string for_workspace_id = 10;

  // How often this key may be used
  // `undefined`, `0` or negative to disable
  optional int32 remaining = 11;
}
message CreateKeyResponse {
  string key_id = 1;
  string key = 2;
}

message Key {
  string id = 1 [(buf.validate.field).string.min_len = 1];
  string key_auth_id = 2 [(buf.validate.field).string.min_len = 1];
  string workspace_id = 3 [(buf.validate.field).string.min_len = 1];
  optional string name = 4;
  string hash = 5;
  string start = 6;
  optional string owner_id = 7;
  optional string meta = 8;
  int64 created_at = 9;
  optional int64 expires = 10;
  optional Ratelimit ratelimit = 11;
  optional string for_workspace_id = 12;
  optional int32 remaining = 13;
}
